[gd_scene load_steps=16 format=3 uid="uid://dwps88i147nc5"]

[ext_resource type="Script" path="res://Scripts/UI/scene_change_buttons.gd" id="1_1dxrr"]
[ext_resource type="Texture2D" uid="uid://cuw5xp1sii5ng" path="res://Assets2D/UIAssets/Order_Station_Button.PNG" id="2_tum0r"]
[ext_resource type="Texture2D" uid="uid://j54mhpmo0wg1" path="res://Assets2D/UIAssets/Grill_Station_Button.PNG" id="3_exoh7"]
[ext_resource type="Texture2D" uid="uid://dvnlwqeq6a74s" path="res://Assets2D/UIAssets/Background_Button.PNG" id="3_ghf18"]
[ext_resource type="AudioStream" uid="uid://cfarnpabp7ocg" path="res://OtherAssets/Sound/cookingbackground.wav" id="3_xg5rt"]
[ext_resource type="Texture2D" uid="uid://dn3nk4s7rru6t" path="res://Assets2D/UIAssets/Assembly_Station_Button.PNG" id="4_vrb21"]
[ext_resource type="Texture2D" uid="uid://bqd3gfw44ufg6" path="res://Assets2D/UIAssets/Fry_Station_Button.PNG" id="5_7sirv"]
[ext_resource type="Texture2D" uid="uid://bg1o7n3wax442" path="res://Assets2D/UIAssets/DrinkCookie_Station_Button.PNG" id="6_4q0v4"]
[ext_resource type="Texture2D" uid="uid://cpqjyfrbq4nkd" path="res://Assets2D/UIAssets/Better__Big_Guy.PNG" id="8_uvrji"]
[ext_resource type="Texture2D" uid="uid://dea8mxqba4cut" path="res://Assets2D/UIAssets/Budget_Thing.PNG" id="10_fd0dv"]
[ext_resource type="Theme" uid="uid://ccj22doayxb2g" path="res://OtherAssets/Fonts/myLabel.tres" id="11_rn8uo"]
[ext_resource type="AudioStream" uid="uid://bybpauux2wvcu" path="res://OtherAssets/Sound/toy-button.wav" id="12_n7te6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljkxt"]
size = Vector2(681, 676)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bubi"]
size = Vector2(168, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mgoi"]
size = Vector2(62, 127)

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1dxrr")

[node name="screenButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.88
anchor_right = 0.738
anchor_bottom = 0.978571
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="orderButton" type="TextureButton" parent="screenButtons"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_tum0r")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="screenButtons/orderButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0725806
anchor_top = -0.0729927
anchor_right = 1.09677
anchor_bottom = 1.06569
texture = ExtResource("3_ghf18")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="buttonsPartTwo" type="AudioStreamPlayer2D" parent="screenButtons/orderButton"]
stream = ExtResource("12_n7te6")
volume_db = 24.0
pitch_scale = 2.33

[node name="grillButton" type="TextureButton" parent="screenButtons"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_exoh7")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="screenButtons/grillButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0725806
anchor_top = -0.0729927
anchor_right = 1.09677
anchor_bottom = 1.06569
texture = ExtResource("3_ghf18")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="buttonssPartTwo" type="AudioStreamPlayer2D" parent="screenButtons/grillButton"]
stream = ExtResource("12_n7te6")
pitch_scale = 2.33

[node name="buildButton" type="TextureButton" parent="screenButtons"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_vrb21")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="screenButtons/buildButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0725806
anchor_top = -0.0729927
anchor_right = 1.09677
anchor_bottom = 1.06569
texture = ExtResource("3_ghf18")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="buttonsPartTwoo" type="AudioStreamPlayer2D" parent="screenButtons/buildButton"]
stream = ExtResource("12_n7te6")
pitch_scale = 2.33

[node name="fryButton" type="TextureButton" parent="screenButtons"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("5_7sirv")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="screenButtons/fryButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0725806
anchor_top = -0.0729927
anchor_right = 1.09677
anchor_bottom = 1.06569
texture = ExtResource("3_ghf18")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="buttonsPartTwo" type="AudioStreamPlayer2D" parent="screenButtons/fryButton"]
stream = ExtResource("12_n7te6")
volume_db = 24.0

[node name="drinkButton" type="TextureButton" parent="screenButtons"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("6_4q0v4")
ignore_texture_size = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="screenButtons/drinkButton"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0725806
anchor_top = -0.0729927
anchor_right = 1.09677
anchor_bottom = 1.06569
texture = ExtResource("3_ghf18")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="buttonsPartTwo" type="AudioStreamPlayer2D" parent="screenButtons/drinkButton"]
stream = ExtResource("12_n7te6")
volume_db = 24.0
pitch_scale = 2.33

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xg5rt")

[node name="OrderLine" type="TextureRect" parent="."]
layout_mode = 0
anchor_top = -0.0314286
anchor_right = 1.002
anchor_bottom = 0.26
texture = ExtResource("8_uvrji")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Line" type="Area2D" parent="OrderLine" groups=["line"]]
position = Vector2(0, 41)
collision_mask = 16777215

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrderLine/Line"]
position = Vector2(418.5, 333)
shape = SubResource("RectangleShape2D_ljkxt")

[node name="bigHold" type="Area2D" parent="OrderLine" groups=["bigHold"]]
position = Vector2(892, 80)
collision_mask = 65535

[node name="CollisionShape2D" type="CollisionShape2D" parent="OrderLine/bigHold"]
position = Vector2(18, 10.5)
shape = SubResource("RectangleShape2D_8bubi")

[node name="ticketContainer" type="Node2D" parent="."]

[node name="takeOrder" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.262
anchor_top = 0.0657143
anchor_right = 0.392
anchor_bottom = 0.14
text = "Take Order"
metadata/_edit_use_anchors_ = true

[node name="ticketCollect" type="Area2D" parent="." groups=["ticketCollect"]]
visible = false
position = Vector2(548, 469)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ticketCollect"]
position = Vector2(174.25, -2.25)
shape = SubResource("RectangleShape2D_0mgoi")
disabled = true

[node name="budget" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 0.794
anchor_top = 0.831429
anchor_right = 1.005
anchor_bottom = 1.02429
texture = ExtResource("10_fd0dv")
expand_mode = 1
stretch_mode = 5
flip_h = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="budget"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.33
anchor_bottom = 0.266
offset_left = 95.0
offset_top = 49.0
offset_right = 91.37
offset_bottom = 48.09
theme = ExtResource("11_rn8uo")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
text = "Budget:"
horizontal_alignment = 1

[node name="budgetNum" type="Label" parent="budget"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.33
anchor_bottom = 0.266
offset_left = 95.0
offset_top = 77.0
offset_right = 91.37
offset_bottom = 76.09
theme = ExtResource("11_rn8uo")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 35
text = "$0"
horizontal_alignment = 1

[connection signal="pressed" from="screenButtons/orderButton" to="." method="_on_order_button_pressed"]
[connection signal="pressed" from="screenButtons/grillButton" to="." method="_on_grill_button_pressed"]
[connection signal="pressed" from="screenButtons/buildButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed" from="screenButtons/fryButton" to="." method="_on_fry_button_pressed"]
[connection signal="pressed" from="screenButtons/drinkButton" to="." method="_on_drink_button_pressed"]
[connection signal="pressed" from="takeOrder" to="." method="_on_take_order_pressed"]
